--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.upper>"
+       "<method 'upper' of 'str' objects>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name =\"art vandelay\" # 'Art Vandelay'\n",
-    "name.upper\n"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "str.upper\n"
    ]
   },
   {
