--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<method 'upper' of 'str' objects>"
+       "<method 'title' of 'str' objects>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "str.title\n"
+    "str.title"
    ]
   },
   {
